--- a/api/package.json
+++ b/api/package.json
@@ -24,7 +24,11 @@
     "mongoose": "^8.0.3",
     "dotenv": "^16.3.1",
     "openai": "^4.20.1",
-    "joi": "^17.11.0"
+    "zod": "^3.22.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
+    "class-validator": "^0.14.0",
+    "class-transformer": "^0.5.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -33,6 +37,8 @@
     "@types/node": "^20.10.4",
     "@types/jest": "^29.5.8",
     "@types/supertest": "^2.0.16",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "typescript": "^5.3.3",
     "ts-node-dev": "^2.0.0",
     "jest": "^29.7.0",
