--- a/env.example
+++ b/env.example
@@ -7,6 +7,8 @@ MONGODB_URI=mongodb://admin:password@localhost:27017/snippets?authSource=admin
 
 # AI API Configuration
 OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_SMALL_MODEL=gpt-3.5-turbo
+OPENAI_STRONG_MODEL=gpt-4
 
 # Optional: Alternative AI providers
 # GEMINI_API_KEY=your_gemini_api_key_here
