--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,24 +11,30 @@
     "lint": "eslint src/**/*.{ts,tsx}",
     "lint:fix": "eslint src/**/*.{ts,tsx} --fix"
   },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!(axios)/)"
+    ]
+  },
   "dependencies": {
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "axios": "^1.6.2",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "@types/jest": "^29.5.8",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/user-event": "^14.5.1",
-    "typescript": "^4.9.5",
-    "eslint": "^8.55.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0"
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.55.0",
+    "ts-jest": "^29.4.0",
+    "typescript": "^4.9.5"
   },
   "browserslist": {
     "production": [
@@ -42,4 +48,4 @@
       "last 1 safari version"
     ]
   }
-} 
+}
