--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       - snippet-network
     command: sh -c "cd /app && npm test && npm start"
 
-  # React Frontend
+  # Next.js Frontend
   frontend:
     build:
       context: ./frontend
@@ -48,7 +48,7 @@ services:
     container_name: snippet-frontend
     restart: unless-stopped
     environment:
-      REACT_APP_API_URL: http://localhost:3000
+      NEXT_PUBLIC_API_URL: http://localhost:3000
     ports:
       - "3030:3030"
     depends_on:
