--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -40,25 +40,18 @@ services:
       - snippet-network
     command: sh -c "cd /app && npm test && npm start"
 
-  # Next.js Frontend (Development)
+  # Next.js Frontend (Production)
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     container_name: snippet-frontend
     restart: unless-stopped
     environment:
       NEXT_PUBLIC_API_URL: http://localhost:3000
-      NODE_ENV: development
+      NODE_ENV: production
     ports:
       - "3030:3030"
-    volumes:
-      # Mount source code for hot reload
-      - ./frontend:/app
-      # Exclude node_modules to avoid conflicts
-      - /app/node_modules
-      # Exclude .next build directory
-      - /app/.next
     depends_on:
       - api
     networks:
