--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,9 @@ services:
       timeout: 5s
       retries: 5
       start_period: 30s
+    profiles:
+      - dev
+      - prod
 
   # Express API Backend
   api:
