Refactor Docker setup and update frontend styles
- Updated docker-compose.yml to specify build context and target for the frontend service, simplifying the build process.
- Removed test execution from the frontend command as tests are now handled in the Dockerfile build stage.
- Cleaned up globals.css by removing unused CSS variables and setting default styles directly.
- Enhanced button, badge, and card components with updated styles for better visual consistency.
- Simplified error handling in the HomePage component by removing unnecessary error checks.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,9 @@ services:
 
   # Next.js Frontend
   frontend:
-    build: ./frontend
+    build: 
+      context: ./frontend
+      target: builder
     container_name: snippet-frontend
     restart: unless-stopped
     environment:
@@ -64,13 +66,13 @@ services:
     volumes:
       # Mount source code for hot reload in development
       - ./frontend:/app
-      - /app/node_modules
       - /app/.next
     depends_on:
       - api
     networks:
       - snippet-network
-    command: sh -c "cd /app && npm test && npm run dev"
+    # Tests are already run in Dockerfile build stage
+    command: npm run dev
     profiles:
       - dev
 
@@ -110,7 +112,7 @@ services:
       - api-prod
     networks:
       - snippet-network
-    command: sh -c "cd /app && npm test && npm start"
+    # Tests are already run in Dockerfile build stage
     profiles:
       - prod
 
