--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,28 +51,25 @@ services:
 
   # Next.js Frontend
   frontend:
-    build: 
-      context: ./frontend
-      target: builder
+    image: node:20-alpine
     container_name: snippet-frontend
+    working_dir: /app
     restart: unless-stopped
     environment:
       NEXT_PUBLIC_API_URL: http://localhost:3000
-      NODE_ENV: ${NODE_ENV:-development}
+      NODE_ENV: development
       PORT: 3030
       HOSTNAME: "0.0.0.0"
     ports:
       - "3030:3030"
     volumes:
-      # Mount source code for hot reload in development
       - ./frontend:/app
-      - /app/.next
+      - /app/node_modules
     depends_on:
       - api
+    command: sh -c "npm install && npm run test:ci && npm run dev"
     networks:
       - snippet-network
-    # Tests are already run in Dockerfile build stage
-    command: npm run dev
     profiles:
       - dev
 
