--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
+    "test:ci": "jest --ci",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
