--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "lucide-react": "ˆ0.525.0",
+    "lucide-react": "^0.525.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "tailwind-merge": "^2.0.0",
