--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,11 +42,12 @@ services:
         condition: service_healthy
     networks:
       - snippet-network
-    command: sh -c "cd /app && npm test && npm start"
+    command: sh -c "cd /app && npm install && npm test && npm run dev"
     volumes:
       # Mount source code for hot reload in development
       - ./api:/app
       - /app/node_modules
+      - /app/dist
     profiles:
       - dev
 
@@ -68,7 +69,7 @@ services:
       - /app/node_modules
     depends_on:
       - api
-    command: sh -c "npm install && npm run test:ci && npm run dev"
+    command: sh -c "npm install && npm test && npm run dev"
     networks:
       - snippet-network
     profiles:
